--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       <option value=20>20</option>
     </select>
     <button onClick="makeRoll();">Roll The Bones</button>
+    <div id='outputDiv'></div>
   </body>
 </html>
